<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.skrb7f16.thehelpingspoon.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >

    </fragment>

    <fragment
        android:id="@+id/nav_feeds"
        android:name="com.skrb7f16.thehelpingspoon.ui.feeds.FeedsFragment"
        android:label="@string/menu_feeds"
        tools:layout="@layout/fragment_feeds" >
            </fragment>

    <fragment
        android:id="@+id/nav_user"
        android:name="com.skrb7f16.thehelpingspoon.ui.user.UserFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_user" >

    </fragment>
</navigation>