<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:background="?attr/colorOnPrimary"
    tools:context=".ui.home.HomeFragment">


    <ScrollView
        android:id="@+id/homeScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/mainLayoutHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:background="@color/organization_color"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="405dp"
                            android:layout_height="400dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/puri_pic"
                            app:tint="#cc8b8b"
                            app:tintMode="multiply" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="-200dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/piedra"
                                android:gravity="center"
                                android:text="@string/app_name"
                                android:textColor="@color/white"
                                android:textSize="30sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/first_slide_home"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="400dp"
                            android:layout_height="400dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/orphans"
                            app:tint="#cc8b8b"
                            app:tintMode="multiply" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="-200dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/second_slide_home"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="400dp"
                            android:layout_height="400dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/food_distribution"
                            app:tint="#cc8b8b"
                            app:tintMode="multiply" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="-200dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/third_slide_home"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/piedra"
                android:gravity="center"
                android:text="How We Work?"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/card_border_bg"
                android:elevation="10dp"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:src="@drawable/food_donation" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/how_we_work"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/card_border_bg"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/join_us_logo" />

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/ic_baseline_arrow_downward_24"
                    app:tint="@color/white" />

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/donate_and_help" />

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/ic_baseline_arrow_downward_24"
                    app:tint="@color/white" />

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/happy_children" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/logged_in"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/logged_in_username_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/piedra"
                    android:gravity="center"
                    android:text="Username"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/Userlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/piedra"
                    android:gravity="center"
                    android:text="Join us !!"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="30sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/loginButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Login" />

                    <Button
                        android:id="@+id/signUpbutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="SignUp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/loginBox"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <EditText
                            android:id="@+id/usernameSignin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="Username"
                            android:inputType="textPersonName" />

                        <EditText
                            android:id="@+id/passwordSignin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="Password"
                            android:inputType="textPassword" />

                        <Button
                            android:id="@+id/signin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="signin" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/signupBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <EditText
                            android:id="@+id/usernameSignup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="Username"
                            android:inputType="textPersonName" />

                        <EditText
                            android:id="@+id/emailSignup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="Your email"
                            android:inputType="textEmailAddress" />

                        <EditText
                            android:id="@+id/passwordSignup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="Password"
                            android:inputType="textPassword" />

                        <EditText
                            android:id="@+id/confirmPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="Confirm Password"
                            android:inputType="textPassword" />

                        <EditText
                            android:id="@+id/citySignup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="City"
                            android:inputType="textPersonName" />

                        <CheckBox
                            android:id="@+id/organizationSignup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Are You An organization"
                            android:textSize="18sp" />

                        <Button
                            android:id="@+id/signup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Signup" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/fbbtn"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:background="@drawable/card_border_bg"
                        android:src="@drawable/ic_facebook" />

                    <ImageButton
                        android:id="@+id/instabtn"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:background="@drawable/card_border_bg"
                        android:src="@drawable/ic_instagram" />

                    <ImageButton
                        android:id="@+id/webbtn"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:background="@drawable/card_border_bg"
                        android:src="@drawable/ic_click"
                        android:tint="@color/organization_color" />

                    <ImageButton
                        android:id="@+id/whatsappbtn"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:background="@drawable/card_border_bg"
                        android:src="@drawable/ic_whatsapp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/copyright_text"
                    android:textColor="?attr/colorOnSecondary" />

            </LinearLayout>



        </LinearLayout>
    </ScrollView>

</LinearLayout>